[gd_scene load_steps=5 format=3 uid="uid://63x2ldnuagja"]

[ext_resource type="Script" uid="uid://d0f0hkms0jr0b" path="res://scenes/environments/POI/placeable_poi.gd" id="1_rnmuo"]
[ext_resource type="Texture2D" uid="uid://xrhly4rowkk2" path="res://assets/map/map_tileset.png" id="2_erv77"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nes2n"]
texture = ExtResource("2_erv77")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
1:0/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)

[sub_resource type="TileSet" id="TileSet_ef7oo"]
tile_size = Vector2i(256, 256)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_nes2n")

[node name="BasePOI" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_rnmuo")

[node name="TileMap" type="TileMapLayer" parent="."]
z_index = -1
scale = Vector2(2, 2)
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_ef7oo")

[node name="Wall" type="Node2D" parent="."]
y_sort_enabled = true

[node name="EnemyHolder" type="Node2D" parent="."]
y_sort_enabled = true

[node name="InteractableHolder" type="Node2D" parent="."]
y_sort_enabled = true

[node name="SpawnHolder" type="Node2D" parent="."]
